crates/diskuse/tests/snapshots/rescanning_everything@linux-d4096-s0.snap
---
source: tests/browse.rs
---
/fixture  scanning 0 B | 0 folders | 0 s


















hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  ? help  q quit
--- styles ---
 0  22..25  DarkGray
 0  34..37  DarkGray
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  89..90  Cyan BOLD
